# vulkan-sandbox

./: Cargo.toml  Makefile  build.rs  todo.md
data/models/: monkey.gltf  teapot.glb
data/shaders/: default.frag  default.vert  default.vert.spv
src/: buffer.rs  camera.rs  clock.rs  color.rs  commands.rs  common_vertex.rs  context.rs  debug_utils.rs  descriptors.rs  device.rs  document.rs  entry.rs  error.rs  errors.rs  fence.rs  framebuffer.rs  image_view.rs  instance.rs  lib.rs  logger.rs  main.rs  master_renderer.rs  material.rs  mesh.rs  mesh_renderer.rs  object.rs  pipeline.rs  renderpass.rs  scene.rs  semaphore.rs  surface.rs  swapchain.rs
src/material/: effect.rs  material.rs  mod.rs
src/resources/: cache.rs  errors.rs  handle.rs  manager.rs  mod.rs
src/vulkan/: buffer.rs  commands.rs  common_vertex.rs  context.rs  debug_utils.rs  descriptors.rs  device.rs  entry.rs  error.rs  fence.rs  framebuffer.rs  image_view.rs  instance.rs  mod.rs  pipeline.rs  renderpass.rs  sampler.rs  surface.rs  swapchain.rs  texture.rs  vertex.rs
src/vulkan/descriptors/: allocator.rs  builder.rs  layout.rs  mod.rs
src/vulkan/pipeline/: mod.rs  shader.rs
stb/: Cargo.toml
