[package]
name = "vulkan"
version = "0.1.0"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
glfw = { version = "0.41.0", features = [ "vulkan" ]}
log = "0.4.14"
thiserror = "1.0.23"
