[package]
name = "vulkan-sandbox"
version = "0.1.0"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.2"
ash = "0.31.0"
glfw = { version = "0.41.0", features = [ "vulkan" ] }
gltf = "0.15.2"
log = "0.4.14"
thiserror = "1.0.23"
ultraviolet = "0.7.5"
vk-mem = "0.2.2"

# Local workspace dependencies
stb = { path = "./stb" }

[workspace]
members = [
  "stb"
]
